--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Autenticar"></activity>
-
+        <activity android:name=".Registrar"></activity>
     </application>
 
 </manifest>
